Working in refactoring OrderServiceImpl, and its unitary test. In progress.